Bug 242708 Custom folder chosen as Junk folder has Junk icon, but keeps it even when not being the Junk folder anymore patch by durbacher@gmx.de r=mscott sr=bienvenu